--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5714,6 +5714,8 @@ two in order to insert additional control points. \'Remove\' deletes the selecte
     <string name="location_gps_source_notification_title">Alert</string>
     <string name="location_gps_source_notification">The GPS source has been switched! GPS will be disabled. Please re-enable before use!</string>
 
-    
+    <!-- Vanir Updater -->
+    <string name="vanirupdate_settings_title">CodeKill updates</string>
+    <string name="vanirupdate_settings_summary">View or install available updates</string>
 
 </resources>
