--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -704,11 +704,7 @@
     <string name="location_settings_title">Location access</string>
     <!-- Main Settings screen setting option title for the item to take you to the security screen -->
     <string name="security_settings_title">Security</string>
-
-    <!-- App Ops -->
-    <string name="appops_settings_title">App privacy</string>
-    <string name="appops_settings_summary">App Ops: App Permission Manager, control permissions for individual apps</string>
-    <!-- Main Settings screen setting option summary text for the item tot ake you to the security and location screen -->
+    <!-- Main Settings screen setting option summary text for the item to take you to the security and location screen -->
     <string name="security_settings_summary">Set My Location, screen unlock, SIM card lock, credential storage lock</string>
     <!-- Main Settings screen setting option summary text for the item to take you to the CDMA security and location screen -->
     <string name="cdma_security_settings_summary">Set My Location, screen unlock, credential storage lock</string>
@@ -5082,8 +5078,6 @@ two in order to insert additional control points. \'Remove\' deletes the selecte
     <string name="ad_all_notifications_summary">Show all notifications including ongoing, non-clearable notifications.</string>
     <string name="ad_pocket_mode_title">Pocket mode</string>
     <string name="ad_pocket_mode_summary">Show active display notifications when you take the device out of your pocket.</string>
-     <string name="ad_sunlight_mode_title">Sunlight mode</string>
-    <string name="ad_sunlight_mode_summary">Invert the colors when in areas with bright light such as direct sunlight.</string>
     <string name="ad_redisplay_title">Redisplay notifications</string>
     <string name="ad_brightness_title">Notification brightness</string>
     <string name="ad_brightness_summary">Brightness level for displaying notifications when automatic brightness is not enabled.</string>
@@ -5604,7 +5598,7 @@ two in order to insert additional control points. \'Remove\' deletes the selecte
     <string name="privacy_guard_filter_does_not_match">No apps with relevant permissions are installed</string>
     <string name="privacy_guard_help_title">Help</string>
     <string name="privacy_guard_reset_title">Reset</string>
-    <string name="privacy_guard_help_text">With Privacy Guard Manager, you can choose which apps you want Privacy Guard to protect. Selected apps will not be able to access your personal data, such as contacts, messages, or call logs. Long pressing on an entry opens the app details screen for that app.\n\nIf you want to show built-in apps, (default shows only user apps), or filter apps to show only the ones which have critical permissions, select the corresponding options in the menu.</string>
+    <string name="privacy_guard_help_text">In this screen you can choose for which apps Privacy Guard should be active by simply tapping on them. Selected apps will not be able to access your personal data, such as contacts, messages or call logs. Long pressing on an entry opens the app details screen for that app.\n\nBy default built-in apps are not shown. If you want to show them, select the respective option in the menu.</string>
     <string name="privacy_guard_manager_show_system_apps">Show built-in apps</string>
     <string name="privacy_guard_manager_filter_permissions">Permission filter</string>
 
@@ -5714,8 +5708,6 @@ two in order to insert additional control points. \'Remove\' deletes the selecte
     <string name="location_gps_source_notification_title">Alert</string>
     <string name="location_gps_source_notification">The GPS source has been switched! GPS will be disabled. Please re-enable before use!</string>
 
-    <!-- Vanir Updater -->
-    <string name="vanirupdate_settings_title">CodeKill updates</string>
-    <string name="vanirupdate_settings_summary">View or install available updates</string>
+
 
 </resources>
